[package]
name = "demos"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie-db = "0.20.0"
reference-trie = "0.20.0"
memory-db = "0.19.0"
keccak-hasher = "0.15.2"
parity-codec = { package = "parity-scale-codec", version = "*", features=["derive"] }
smallvec = "1.2.0"
hash-db = "0.15.2"
log = "*"
hashlink = "0.5.0"
tokio ={ version = "0.2.17", features = ["rt-core", "time", "sync", "stream"] }
futures = "0.3"
crossbeam-queue = "0.2"
async-stream = "0.2"
chrono = "0.2"
chashmap = "2.2.2"
rand = ""
rayon = "1.3"
parking_lot = "0.10.2"
