[package]
name = "demos"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie-db = "0.20.0"
reference-trie = "0.20.0"
memory-db = "0.19.0"
keccak-hasher = "0.15.2"
parity-codec = { package = "parity-scale-codec", version = "*", features=["derive"] }
smallvec = "1.2.0"
hash-db = "0.15.2"
log = "*"
hashlink = "0.5.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros", "signal", "net", "io-util"] }
futures = "0.3"
crossbeam-queue = "0.2"
async-stream = "0.2"
chrono = "0.2"
chashmap = "2.2.2"
rand = ""
rayon = "1.3"
parking_lot = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
serde_json = "1.0"
futures-timer = "3.0.1"
wasmer-runtime = { version = "=0.17.0", features = ["default-backend-singlepass"], default-features = false }
wasmer-runtime-core = { version = "=0.17.0" }
bytes = "0.5"
fnv = "1.0.6"
rocksdb = "0.13.0"
tempfile = "3.1.0"
num_cpus = "1.0"
lru = "0.6.1"

[workspace]
members = [
    "wasm-rs",
    "jsonrpcv2",
]
