[package]
name = "jsonrpcv2"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-v2 = "0.5.2"
actix-web = "2"
actix-rt = "1"
parking_lot = "0.10.2"
tokio ={ version = "0.2.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
